--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Calculadora</title>
     <link rel="stylesheet" href="/assets/style.css" />
   </head>
-  <body>
+  <body onload="inicio();">
     <section id="calculadora">
-      <div class="display"><p id="pantalla"></p></div>
+      <div id="pantalla"><p id="resultado"></p></div>
 
       <div class="botones">
         <button id="siete">7</button>
@@ -24,12 +24,12 @@
         <button id="tres">3</button>
         <button id="resta">-</button>
         <button id="cero">0</button>
-        <button id="reset">C</button>
+        <button id="clear">C</button>
         <button id="igual">=</button>
         <button id="suma">+</button>
       </div>
     </section>
 
-    <script src="assets/script.js"></script>
+    <script type="text/Javascript" src="assets/script.js"></script>
   </body>
 </html>
